# agents-on-langchain

./: .flake8  .gitignore  Dockerfile.build  Dockerfile.dev  Dockerfile.test  README.md  docker-compose.yaml  pyproject.toml  versioning_script.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd-pipeline.yaml
src/agents_on_langchain/: __init__.py  base_agent.py  summary.py  system_status.py
tests/: test_agent.py  test_logging.py  test_system_status_agent.py
