[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents_on_langchain"
dynamic = ["version"]
description = "A lightweight Python package for creating agents on Langchain for Agentic platforms"
readme = "README.md"
authors = [
    { name = "Sinan Ozel", email = "coding@sinan.slmail.me" }
]
license = { file = "LICENSE" }
dependencies = [
    "langchain-core>=0.3.31",
    "typing-extensions>=4.0.0",
    "numpy==1.26.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",         # For running tests
    "pytest-cov>=3.0.0",     # For test coverage reporting
]

dev = [
    "pytest>=7.0.0",         # For running tests
    "pytest-cov>=3.0.0",     # For test coverage reporting
    "flake8>=5.0.0",         # For linting
    "black>=23.0",           # For code formatting
    "mypy>=1.0.0",           # For static type checking
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", "*.pyc", "build", "dist"]

[tool.setuptools.dynamic]
version = { attr = "agents_on_langchain.__version__" }
